--- a/Windows/OperationWindow.xaml
+++ b/Windows/OperationWindow.xaml
@@ -1,13 +1,11 @@
-<?xml version="1.0" encoding="utf-8" ?>
-
-<winUiEx:WindowEx
-    x:Class="_7zip.MainWindow"
+﻿<winUiEx:WindowEx
+    x:Class="_7zip.Windows.OperationWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:labs="using:CommunityToolkit.Labs.WinUI"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="using:_7zip.Windows"
     xmlns:winUiEx="using:WinUIEx"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Width="500"
     Height="140"
     MaxHeight="140"
@@ -29,7 +27,7 @@
                 Width="16"
                 Height="16"
                 Margin="8,0"
-                Source="Assets/AppIcon.ico" />
+                Source="/Assets/AppIcon.ico" />
             <TextBlock x:Name="TextBlock" Text="解压缩" />
         </StackPanel>
         <StackPanel Grid.Row="1" Margin="32,0,23,32">
@@ -58,5 +56,4 @@
                 Value="80" />
         </StackPanel>
     </Grid>
-
 </winUiEx:WindowEx>
