--- a/Windows/OperationWindow.xaml
+++ b/Windows/OperationWindow.xaml
@@ -2,17 +2,17 @@
     x:Class="_7zip.Windows.OperationWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:_7zip.Windows"
-    xmlns:winUiEx="using:WinUIEx"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:_7zip.Windows"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:winUiEx="using:WinUIEx"
     Width="500"
     Height="140"
-    MaxHeight="140"
     MaxWidth="500"
+    MaxHeight="140"
     mc:Ignorable="d">
     <Window.SystemBackdrop>
-        <DesktopAcrylicBackdrop></DesktopAcrylicBackdrop>
+        <DesktopAcrylicBackdrop />
     </Window.SystemBackdrop>
     <Grid MinHeight="200">
         <Grid.RowDefinitions>
