--- a/Windows/NewCompressionWindow.xaml
+++ b/Windows/NewCompressionWindow.xaml
@@ -20,14 +20,110 @@
         <Grid Grid.Row="0">
             <TextBlock Text="新建压缩文件" Margin="8 4 0 0"/>
         </Grid>
-
-        <StackPanel Grid.Row="1" Margin="10">
-
-            <StackPanel >
-                
-            </StackPanel>
+        
+        
             
-            <StackPanel Spacing="10">
+            <ScrollViewer Grid.Row="1">
+                <StackPanel Margin="10">
+                <Grid >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="6*" />
+                        <ColumnDefinition Width="4*" />
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Spacing="10" Grid.Column="1">
+                        <ComboBox PlaceholderText="Pick a color" >
+                            <x:String>Blue</x:String>
+                            <x:String>Green</x:String>
+                            <x:String>Red</x:String>
+                            <x:String>Yellow</x:String>
+                        </ComboBox>
+
+                        <Slider
+     AutomationProperties.Name="Slider with ticks"
+     TickFrequency="20"
+     TickPlacement="Outside"
+     SnapsTo="StepValues" />
+
+                        <ComboBox PlaceholderText="Pick a color" >
+                            <x:String>Blue</x:String>
+                            <x:String>Green</x:String>
+                            <x:String>Red</x:String>
+                            <x:String>Yellow</x:String>
+                        </ComboBox>
+
+                        <ComboBox  PlaceholderText="Pick a color" >
+                            <x:String>Blue</x:String>
+                            <x:String>Green</x:String>
+                            <x:String>Red</x:String>
+                            <x:String>Yellow</x:String>
+                        </ComboBox>
+
+                        <ComboBox  PlaceholderText="Pick a color" >
+                            <x:String>Blue</x:String>
+                            <x:String>Green</x:String>
+                            <x:String>Red</x:String>
+                            <x:String>Yellow</x:String>
+                        </ComboBox>
+
+                        <ComboBox PlaceholderText="Pick a color" >
+                            <x:String>Blue</x:String>
+                            <x:String>Green</x:String>
+                            <x:String>Red</x:String>
+                            <x:String>Yellow</x:String>
+                        </ComboBox>
+
+                        <Slider
+AutomationProperties.Name="Slider with ticks"
+TickFrequency="20"
+TickPlacement="Outside"
+SnapsTo="StepValues" />
+
+                        <ComboBox PlaceholderText="Pick a color" >
+                            <x:String>Blue</x:String>
+                            <x:String>Green</x:String>
+                            <x:String>Red</x:String>
+                            <x:String>Yellow</x:String>
+                        </ComboBox>
+
+                        <ComboBox IsEditable="True"  />
+
+
+                        <AutoSuggestBox 
+                Width="300" AutomationProperties.Name="Basic AutoSuggestBox"/>
+
+                        <ComboBox PlaceholderText="Pick a color" >
+                            <x:String>Blue</x:String>
+                            <x:String>Green</x:String>
+                            <x:String>Red</x:String>
+                            <x:String>Yellow</x:String>
+                        </ComboBox>
+
+                        <ComboBox PlaceholderText="Pick a color" >
+                            <x:String>Blue</x:String>
+                            <x:String>Green</x:String>
+                            <x:String>Red</x:String>
+                            <x:String>Yellow</x:String>
+                        </ComboBox>
+
+
+                    </StackPanel>
+                    <StackPanel Grid.Column="0" Spacing="22" Margin="10">
+
+                        <TextBlock Text="压缩格式"/>
+                        <TextBlock Text="压缩等级"/>
+                        <TextBlock Text="压缩方法"/>
+                        <TextBlock Text="字典大小"/>
+                        <TextBlock Text="单词大小"/>
+                        <TextBlock Text="固实数据大小"/>
+                        <TextBlock Text="CPU线程数"/>
+                        <TextBlock Text="压缩所需内存"/>
+                        <TextBlock Text="分卷大小，字节"/>
+                        <TextBlock Text="参数"/>
+                        <TextBlock Text="更新方式"/>
+                        <TextBlock Text="路径模式"/>
+                    </StackPanel>
+                </Grid>
+                <StackPanel Margin="0 10 0 0" Spacing="10">
                 <labs:SettingsExpander x:Name="settingsCard2"
            Header="选项"
            >
@@ -89,8 +185,9 @@
                     </labs:SettingsExpander.Items>
                 </labs:SettingsExpander>
             </StackPanel>
-            
-        </StackPanel>
+                </StackPanel>
+            </ScrollViewer>
+        
         
     </Grid>
 </Window>
