--- a/Windows/NewCompressionWindow.xaml
+++ b/Windows/NewCompressionWindow.xaml
@@ -4,38 +4,43 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:labs="using:CommunityToolkit.Labs.WinUI"
     xmlns:local="using:_7zip.Windows"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:labs="using:CommunityToolkit.Labs.WinUI"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <Window.SystemBackdrop>
         <DesktopAcrylicBackdrop />
     </Window.SystemBackdrop>
 
-    <Grid >
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="32"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="82"/>
+            <RowDefinition Height="32" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="82" />
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0"  Orientation="Horizontal">
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
             <ImageIcon
-       Width="16"
-       Height="16"
-       Margin="8,0,0,0"
-       Source="/Assets/AppIcon.ico" />
-            <TextBlock Text="新建压缩文件" VerticalAlignment="Center" FontSize="12" Margin="8 0 0 0"/>
+                Width="16"
+                Height="16"
+                Margin="8,0,0,0"
+                Source="/Assets/AppIcon.ico" />
+            <TextBlock
+                Margin="8,0,0,0"
+                VerticalAlignment="Center"
+                FontSize="12"
+                Text="新建压缩文件" />
         </StackPanel>
 
         <ScrollViewer Grid.Row="1">
-                <StackPanel Margin="10">
-                <Grid >
+            <StackPanel Margin="10">
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="6*" />
                         <ColumnDefinition Width="4*" />
                     </Grid.ColumnDefinitions>
-                    <StackPanel Spacing="10" Grid.Column="1">
-                        <ComboBox PlaceholderText="Pick a color" >
+                    <StackPanel Grid.Column="1" Spacing="10">
+                        <ComboBox PlaceholderText="Pick a color">
                             <x:String>Blue</x:String>
                             <x:String>Green</x:String>
                             <x:String>Red</x:String>
@@ -43,33 +48,33 @@
                         </ComboBox>
 
                         <Slider
-     AutomationProperties.Name="Slider with ticks"
-     TickFrequency="20"
-     TickPlacement="Outside"
-     SnapsTo="StepValues" />
+                            AutomationProperties.Name="Slider with ticks"
+                            SnapsTo="StepValues"
+                            TickFrequency="20"
+                            TickPlacement="Outside" />
 
-                        <ComboBox PlaceholderText="Pick a color" >
+                        <ComboBox PlaceholderText="Pick a color">
                             <x:String>Blue</x:String>
                             <x:String>Green</x:String>
                             <x:String>Red</x:String>
                             <x:String>Yellow</x:String>
                         </ComboBox>
 
-                        <ComboBox  PlaceholderText="Pick a color" >
+                        <ComboBox PlaceholderText="Pick a color">
                             <x:String>Blue</x:String>
                             <x:String>Green</x:String>
                             <x:String>Red</x:String>
                             <x:String>Yellow</x:String>
                         </ComboBox>
 
-                        <ComboBox  PlaceholderText="Pick a color" >
+                        <ComboBox PlaceholderText="Pick a color">
                             <x:String>Blue</x:String>
                             <x:String>Green</x:String>
                             <x:String>Red</x:String>
                             <x:String>Yellow</x:String>
                         </ComboBox>
 
-                        <ComboBox PlaceholderText="Pick a color" >
+                        <ComboBox PlaceholderText="Pick a color">
                             <x:String>Blue</x:String>
                             <x:String>Green</x:String>
                             <x:String>Red</x:String>
@@ -77,32 +82,31 @@
                         </ComboBox>
 
                         <Slider
-AutomationProperties.Name="Slider with ticks"
-TickFrequency="20"
-TickPlacement="Outside"
-SnapsTo="StepValues" />
+                            AutomationProperties.Name="Slider with ticks"
+                            SnapsTo="StepValues"
+                            TickFrequency="20"
+                            TickPlacement="Outside" />
 
-                        <ComboBox PlaceholderText="Pick a color" >
+                        <ComboBox PlaceholderText="Pick a color">
                             <x:String>Blue</x:String>
                             <x:String>Green</x:String>
                             <x:String>Red</x:String>
                             <x:String>Yellow</x:String>
                         </ComboBox>
 
-                        <ComboBox IsEditable="True"  />
+                        <ComboBox IsEditable="True" />
 
 
-                        <AutoSuggestBox 
-                Width="300" AutomationProperties.Name="Basic AutoSuggestBox"/>
+                        <AutoSuggestBox Width="300" AutomationProperties.Name="Basic AutoSuggestBox" />
 
-                        <ComboBox PlaceholderText="Pick a color" >
+                        <ComboBox PlaceholderText="Pick a color">
                             <x:String>Blue</x:String>
                             <x:String>Green</x:String>
                             <x:String>Red</x:String>
                             <x:String>Yellow</x:String>
                         </ComboBox>
 
-                        <ComboBox PlaceholderText="Pick a color" >
+                        <ComboBox PlaceholderText="Pick a color">
                             <x:String>Blue</x:String>
                             <x:String>Green</x:String>
                             <x:String>Red</x:String>
@@ -111,97 +115,107 @@ SnapsTo="StepValues" />
 
 
                     </StackPanel>
-                    <StackPanel Grid.Column="0" Spacing="22" Margin="10">
+                    <StackPanel
+                        Grid.Column="0"
+                        Margin="10"
+                        Spacing="22">
 
-                        <TextBlock Text="压缩格式"/>
-                        <TextBlock Text="压缩等级"/>
-                        <TextBlock Text="压缩方法"/>
-                        <TextBlock Text="字典大小"/>
-                        <TextBlock Text="单词大小"/>
-                        <TextBlock Text="固实数据大小"/>
-                        <TextBlock Text="CPU线程数"/>
-                        <TextBlock Text="压缩所需内存"/>
-                        <TextBlock Text="分卷大小，字节"/>
-                        <TextBlock Text="参数"/>
-                        <TextBlock Text="更新方式"/>
-                        <TextBlock Text="路径模式"/>
+                        <TextBlock Text="压缩格式" />
+                        <TextBlock Text="压缩等级" />
+                        <TextBlock Text="压缩方法" />
+                        <TextBlock Text="字典大小" />
+                        <TextBlock Text="单词大小" />
+                        <TextBlock Text="固实数据大小" />
+                        <TextBlock Text="CPU线程数" />
+                        <TextBlock Text="压缩所需内存" />
+                        <TextBlock Text="分卷大小，字节" />
+                        <TextBlock Text="参数" />
+                        <TextBlock Text="更新方式" />
+                        <TextBlock Text="路径模式" />
                     </StackPanel>
                 </Grid>
-                <StackPanel Margin="0 10 0 0" Spacing="10">
-                <labs:SettingsExpander x:Name="settingsCard2"
-           Header="选项"
-           >
-                    <!--  TODO: This should be TwoWay bound but throws compile error in Uno.  -->
-                    <labs:SettingsExpander.HeaderIcon>
-                        <FontIcon Glyph="&#xE115;" />
-                    </labs:SettingsExpander.HeaderIcon>
+                <StackPanel Margin="0,10,0,0" Spacing="10">
+                    <labs:SettingsExpander x:Name="settingsCard2" Header="选项">
+                        <!--  TODO: This should be TwoWay bound but throws compile error in Uno.  -->
+                        <labs:SettingsExpander.HeaderIcon>
+                            <FontIcon Glyph="&#xE115;" />
+                        </labs:SettingsExpander.HeaderIcon>
 
-                    <labs:SettingsExpander.Items>
+                        <labs:SettingsExpander.Items>
 
-                        <labs:SettingsCard ContentAlignment="Left">
-                            <CheckBox Content="创建自释放程序" />
-                        </labs:SettingsCard>
+                            <labs:SettingsCard ContentAlignment="Left">
+                                <CheckBox Content="创建自释放程序" />
+                            </labs:SettingsCard>
 
-                        <labs:SettingsCard ContentAlignment="Left">
-                            <CheckBox Content="压缩共享文件" />
-                        </labs:SettingsCard>
+                            <labs:SettingsCard ContentAlignment="Left">
+                                <CheckBox Content="压缩共享文件" />
+                            </labs:SettingsCard>
 
-                        <labs:SettingsCard ContentAlignment="Left">
-                            <CheckBox Content="操作完成后删除文件" />
-                        </labs:SettingsCard>
+                            <labs:SettingsCard ContentAlignment="Left">
+                                <CheckBox Content="操作完成后删除文件" />
+                            </labs:SettingsCard>
 
 
-                    </labs:SettingsExpander.Items>
-                </labs:SettingsExpander>
-                <labs:SettingsExpander x:Name="settingsCard"
-                           Header="加密"
-                           >
-                    <!--  TODO: This should be TwoWay bound but throws compile error in Uno.  -->
-                    <labs:SettingsExpander.HeaderIcon>
-                        <FontIcon Glyph="&#xE192;" />
-                    </labs:SettingsExpander.HeaderIcon>
-                    
+                        </labs:SettingsExpander.Items>
+                    </labs:SettingsExpander>
+                    <labs:SettingsExpander x:Name="settingsCard" Header="加密">
+                        <!--  TODO: This should be TwoWay bound but throws compile error in Uno.  -->
+                        <labs:SettingsExpander.HeaderIcon>
+                            <FontIcon Glyph="&#xE192;" />
+                        </labs:SettingsExpander.HeaderIcon>
 
-                    <labs:SettingsExpander.Items>
 
-                        <labs:SettingsCard Header="输入密码">
-                            <PasswordBox Width="300" PlaceholderText="Enter your password" PasswordChar="#" />
-                        </labs:SettingsCard>
+                        <labs:SettingsExpander.Items>
 
-                        <labs:SettingsCard Header="再次输入密码">
-                            <PasswordBox Width="300" PlaceholderText="Enter your password" PasswordChar="#" />
-                        </labs:SettingsCard>
+                            <labs:SettingsCard Header="输入密码">
+                                <PasswordBox
+                                    Width="300"
+                                    PasswordChar="#"
+                                    PlaceholderText="Enter your password" />
+                            </labs:SettingsCard>
 
-                        <labs:SettingsCard Header="加密算法">
-                            <ComboBox PlaceholderText="Pick a color" Width="200">
-                                <x:String>Blue</x:String>
-                                <x:String>Green</x:String>
-                                <x:String>Red</x:String>
-                                <x:String>Yellow</x:String>
-                            </ComboBox>
-                        </labs:SettingsCard>
+                            <labs:SettingsCard Header="再次输入密码">
+                                <PasswordBox
+                                    Width="300"
+                                    PasswordChar="#"
+                                    PlaceholderText="Enter your password" />
+                            </labs:SettingsCard>
 
-                        <labs:SettingsCard ContentAlignment="Left">
-                            <CheckBox Content="加密文件名" />
-                        </labs:SettingsCard>
+                            <labs:SettingsCard Header="加密算法">
+                                <ComboBox Width="200" PlaceholderText="Pick a color">
+                                    <x:String>Blue</x:String>
+                                    <x:String>Green</x:String>
+                                    <x:String>Red</x:String>
+                                    <x:String>Yellow</x:String>
+                                </ComboBox>
+                            </labs:SettingsCard>
 
-                        
-                    </labs:SettingsExpander.Items>
-                </labs:SettingsExpander>
-            </StackPanel>
+                            <labs:SettingsCard ContentAlignment="Left">
+                                <CheckBox Content="加密文件名" />
+                            </labs:SettingsCard>
+
+
+                        </labs:SettingsExpander.Items>
+                    </labs:SettingsExpander>
                 </StackPanel>
-            </ScrollViewer>
+            </StackPanel>
+        </ScrollViewer>
 
-        <Grid Grid.Row="2" Background="#30000000">
-            <Grid Background="#30000000" Height="1" VerticalAlignment="Top"/>
-            <StackPanel Orientation="Horizontal" Spacing="15" Margin="0 0 25 0" HorizontalAlignment="Right" VerticalAlignment="Center">
+        <Grid Grid.Row="2" Background="{ThemeResource SystemAltLowColor}">
+            <Grid Height="1" VerticalAlignment="Top" />
+            <StackPanel
+                Margin="0,0,25,0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                Orientation="Horizontal"
+                Spacing="15">
 
-                <Button Content="Cancel"/>
-                <Button Style="{StaticResource AccentButtonStyle}" Content="创建压缩文件"/>
+                <Button Content="Cancel" />
+                <Button Content="创建压缩文件" Style="{StaticResource AccentButtonStyle}" />
 
             </StackPanel>
         </Grid>
-        
-        
+
+
     </Grid>
 </Window>
