--- a/App.xaml
+++ b/App.xaml
@@ -10,6 +10,14 @@
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <!--  Other merged dictionaries here  -->
             </ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Dark">
+                    <SolidColorBrush x:Key="SystemAltLowColorCustom0" Color="#33000000" />
+                </ResourceDictionary>
+                <ResourceDictionary x:Key="Light">
+                    <SolidColorBrush x:Key="SystemAltLowColorCustom0" Color="#20F2F2F2" />
+                </ResourceDictionary>
+            </ResourceDictionary.ThemeDictionaries>
             <!--  Other app resources here  -->
         </ResourceDictionary>
     </Application.Resources>
