--- a/src/7zip/Views/Pages/MainPage.xaml
+++ b/src/7zip/Views/Pages/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="_7zip.Pages.MainPage"
+    x:Class="_7zip.Views.Pages.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:_7zip.Pages"
+    xmlns:local="using:_7zip.Views.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
