--- a/src/7zip/Views/Windows/NewCompressionWindow.xaml
+++ b/src/7zip/Views/Windows/NewCompressionWindow.xaml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Window
-    x:Class="_7zip.Windows.NewCompressionWindow"
+    x:Class="_7zip.Views.Windows.NewCompressionWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:labs="using:CommunityToolkit.WinUI.Controls"
-    xmlns:local="using:_7zip.Windows"
+    xmlns:local="using:_7zip.Views.Windows"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <Window.SystemBackdrop>
