--- a/src/7zip/Views/Windows/OperationWindow.xaml
+++ b/src/7zip/Views/Windows/OperationWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<winUiEx:WindowEx
-    x:Class="_7zip.Windows.OperationWindow"
+    x:Class="_7zip.Views.Windows.OperationWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="using:_7zip.Windows"
+    xmlns:local="using:_7zip.Views.Windows"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:pages="using:_7zip.Pages"
+    xmlns:pages="using:_7zip.Views.Pages"
     xmlns:winUiEx="using:WinUIEx"
     Width="500"
     Height="140"
