--- a/src/7zip/App.xaml
+++ b/src/7zip/App.xaml
@@ -3,6 +3,7 @@
     x:Class="_7zip.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:helper="using:_7zip.Helpers"
     xmlns:local="using:_7zip">
     <Application.Resources>
         <ResourceDictionary>
@@ -10,15 +11,20 @@
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <!--  Other merged dictionaries here  -->
             </ResourceDictionary.MergedDictionaries>
+            
+            <!-- Styles -->
             <ResourceDictionary.ThemeDictionaries>
-                <ResourceDictionary x:Key="Dark">
-                    <SolidColorBrush x:Key="SystemAltLowColorCustom0" Color="#33000000" />
-                </ResourceDictionary>
-                <ResourceDictionary x:Key="Light">
-                    <SolidColorBrush x:Key="SystemAltLowColorCustom0" Color="#40C5C5C5" />
-                </ResourceDictionary>
+                <ResourceDictionary x:Key="Dark" Source="./Styles/Themes.Dark.xaml" />
+                <ResourceDictionary x:Key="Light" Source="./Styles/Themes.Light.xaml" />
             </ResourceDictionary.ThemeDictionaries>
-            <!--  Other app resources here  -->
+            
+            <!--  Converters  -->
+            <helper:PathToFileNameConverter x:Key="PathToFileNameConverter" />
+            <helper:BooleanInversionConverter x:Key="BooleanInversionConverter" />
+            <helper:BasicCalculateConverter x:Key="BasicCalculateConverter" />
+            <helper:IsPausedSymbolIconConverter x:Key="IsPausedSymbolIconConverter" />
+            <helper:IsStringContainedByConverter x:Key="IsStringContainedByConverter" />
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
