--- a/src/7zip/Views/Pages/MainPage.xaml
+++ b/src/7zip/Views/Pages/MainPage.xaml
@@ -2,9 +2,10 @@
     x:Class="_7zip.Views.Pages.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:_7zip.Views.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:_7zip.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="using:_7zip.ViewModels"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
@@ -14,14 +15,14 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackPanel
-        Grid.Row="0"
-        Margin="8"
-        Orientation="Horizontal">
+            Grid.Row="0"
+            Margin="8"
+            Orientation="Horizontal">
             <ImageIcon
-            Width="16"
-            Height="16"
-            Margin="4,0,8,0"
-            Source="/Assets/AppIcon.ico" />
+                Width="16"
+                Height="16"
+                Margin="4,0,8,0"
+                Source="/Assets/AppIcon.ico" />
             <TextBlock x:Name="TextBlock" Text="7 Zip" />
         </StackPanel>
         <MenuBar Grid.Row="1">
@@ -61,11 +62,11 @@
             </MenuBarItem>
         </MenuBar>
         <CommandBar
-        Grid.Row="2"
-        HorizontalAlignment="Left"
-        Background="Transparent"
-        DefaultLabelPosition="Right"
-        IsOpen="False">
+            Grid.Row="2"
+            HorizontalAlignment="Left"
+            Background="Transparent"
+            DefaultLabelPosition="Right"
+            IsOpen="False">
             <AppBarButton Icon="Add" Label="添加" />
             <AppBarButton Icon="MoveToFolder" Label="提取" />
             <AppBarButton Icon="Accept" Label="测试" />
@@ -78,22 +79,86 @@
                 </AppBarButton.Icon>
             </AppBarButton>
         </CommandBar>
-        <StackPanel
-        Grid.Row="3"
-        HorizontalAlignment="Center"
-        VerticalAlignment="Center"
-        Orientation="Vertical">
-            <TextBlock Text="测试：将" />
-            <TextBox x:Name="archivePathTxtBox" Width="900" />
-            <TextBlock Text="解压到" />
-            <TextBox x:Name="outputPathTxtBox" Width="900" />
-            <Button Click="ButtonBase_OnClick" Content="新窗口" />
-        </StackPanel>
+        <Grid
+            Grid.Row="3"
+            Width="500"
+            Height="600"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <TextBlock
+                Margin="0,10,0,0"
+                HorizontalAlignment="Center"
+                FontSize="20"
+                Text="测试解压" />
+            <Button
+                x:Name="addExtractionInfoButton"
+                Margin="15"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Click="AddExtractionInfoButton_Clicked"
+                Content="&#xE710;"
+                FontFamily="Segoe MDL2 Assets" />
+            <Button
+                x:Name="removeExtractionInfoButton"
+                Margin="15,15,70,15"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Click="RemoveExtractionInfoButton_Clicked"
+                Content="&#xE74D;"
+                FontFamily="Segoe MDL2 Assets" />
+            <Button
+                x:Name="extractButton"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Click="ExtractionButton_Clicked"
+                Content="开始解压" />
+            <StackPanel
+                Margin="0,60,0,0"
+                Orientation="Vertical"
+                Spacing="5">
+                <ListView
+                    x:Name="extractionInfoListView"
+                    Width="500"
+                    Height="400"
+                    ItemsSource="{x:Bind extractionInfos}"
+                    SelectionMode="Multiple">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="vm:ExtractionInfoViewModel">
+                            <StackPanel
+                                Margin="5"
+                                HorizontalAlignment="Stretch"
+                                Orientation="Vertical">
+                                <Grid>
+                                    <TextBlock Margin="0,7,0,0" Text="路径：" />
+                                    <TextBox
+                                        Margin="50,0,0,0"
+                                        HorizontalAlignment="Stretch"
+                                        Text="{Binding ArchivePath, Mode=TwoWay}" />
+                                </Grid>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <Border
+                    Height="1"
+                    HorizontalAlignment="Stretch"
+                    BorderBrush="{ThemeResource SystemBaseMediumColor}"
+                    BorderThickness="5" />
+                <TextBox
+                    x:Name="outputDirTextBox"
+                    Height="90"
+                    HorizontalAlignment="Stretch"
+                    PlaceholderText="在此输入输出路径"
+                    Text="" />
+            </StackPanel>
+
+        </Grid>
         <Button
-        Grid.Row="3"
-        HorizontalAlignment="Center"
-        VerticalAlignment="Bottom"
-        Click="Button_Click"
-        Content="新NewCompressionWindow" />
+            Grid.Row="3"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
+            Click="Button_Click"
+            Content="新NewCompressionWindow" />
     </Grid>
 </Page>
