设置 - 补充设置弹窗框架及简单切换逻辑

--- a/src/7zip/Views/Pages/MainPage.xaml
+++ b/src/7zip/Views/Pages/MainPage.xaml
@@ -60,6 +60,8 @@
             <MenuBarItem Title="帮助">
                 <MenuFlyoutItem Text="关于7Zip" />
             </MenuBarItem>
+            <MenuBarItem Title="设置" Tapped="MenuBarItem_Tapped"/>
+
         </MenuBar>
         <CommandBar
             Grid.Row="2"
