--- a/src/7zip/Views/Pages/AboutPage.xaml
+++ b/src/7zip/Views/Pages/AboutPage.xaml
@@ -5,11 +5,36 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:_7zip.Views.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:labs="using:CommunityToolkit.WinUI.Controls"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+       Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-        <AppBarButton Width="40" Height="40" HorizontalAlignment="Right" VerticalAlignment="Top" Margin=" 20 20" VerticalContentAlignment="Center" Icon="Manage" Click="AppBarButton_Click" />
+    <Grid Margin="10">
+        <StackPanel>
+            <Grid Height="28"/>
+            <CommandBar>
+                <AppBarButton HorizontalAlignment="Right" VerticalAlignment="Top" VerticalContentAlignment="Center" Icon="Manage" Click="AppBarButton_Click" />
+            </CommandBar>
+
+            <TextBlock Text="Settings" Style="{ThemeResource TitleLargeTextBlockStyle}"/>
+
+            <StackPanel Spacing="3" Margin="0 10 0 0">
+                <labs:SettingsCard x:Name="settingsCard"
+                   Description="This is a default card, with the Header, HeaderIcon, Description and Content set."
+                   Header="This is the Header"
+                   >
+                    <labs:SettingsCard.HeaderIcon>
+                        <FontIcon Glyph="&#xE799;" />
+                    </labs:SettingsCard.HeaderIcon>
+                    <ComboBox SelectedIndex="0">
+                        <ComboBoxItem>Option 1</ComboBoxItem>
+                        <ComboBoxItem>Option 2</ComboBoxItem>
+                        <ComboBoxItem>Option 3</ComboBoxItem>
+                    </ComboBox>
+                </labs:SettingsCard>
+            </StackPanel>
+        </StackPanel>
+        
     </Grid>
 </Page>
