--- a/src/7zip/Views/Pages/AboutPage.xaml
+++ b/src/7zip/Views/Pages/AboutPage.xaml
@@ -10,16 +10,16 @@
     mc:Ignorable="d"
        Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid Margin="10">
+    <Grid Margin="16 0">
         <StackPanel>
             <Grid Height="28"/>
-            <CommandBar>
+            <CommandBar OverflowButtonVisibility="Collapsed">
                 <AppBarButton HorizontalAlignment="Right" VerticalAlignment="Top" VerticalContentAlignment="Center" Icon="Manage" Click="AppBarButton_Click" />
             </CommandBar>
 
             <TextBlock Text="Settings" Style="{ThemeResource TitleLargeTextBlockStyle}"/>
 
-            <StackPanel Spacing="3" Margin="0 10 0 0">
+            <StackPanel Spacing="3" Margin="0 10">
                 <labs:SettingsExpander x:Name="settingsCard"
                            Description="Select the theme of the app"
                            Header="App Theme"
@@ -44,6 +44,13 @@
                     </labs:SettingsExpander.Items>
                 </labs:SettingsExpander>
             </StackPanel>
+
+            <TextBlock Text="About This App" Style="{ThemeResource BodyStrongTextBlockStyle}" Margin="0 10"/>
+            
+            <TextBlock Text="File Decompression Tool 0.1.4"/>
+            <TextBlock Text="©Mica Craft 2023. All rights reserved."/>
+
+            <Button Content="Feedback" Margin="0 20"/>
         </StackPanel>
         
     </Grid>
